# rs-tracer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/geometry/: actor.rs  mod.rs  plane.rs  scene.rs  sphere.rs
src/rendering/: light.rs  ray.rs  ray_emitter.rs  renderer.rs
tracer-core/: Cargo.toml
tracer-core/src/: lib.rs  main.rs
tracer-core/src/entity/: actor.rs  mod.rs  scene.rs
tracer-core/src/entity/geometry/: mod.rs  plane.rs  ray.rs  sphere.rs
tracer-core/src/entity/rendering/: light.rs  material.rs  mod.rs
tracer-core/src/geometry/: actor.rs  mod.rs  plane.rs  scene.rs  sphere.rs
tracer-core/src/rendering/: image_filter.rs  light.rs  mod.rs  ray.rs  ray_emitter.rs  renderer.rs
tracer-render/: Cargo.toml
tracer-render/src/: main.rs  renderer.rs
